2-environments/2-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gce-ingress-maliev-staging
  namespace: maliev-staging
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: maliev-ip
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
    - hosts:
        - "*.maliev.com"
        - maliev.com
      secretName: maliev-com-wildcard-tls
  rules:
    - host: staging.api.maliev.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: maliev-auth-service
                port:
                  number: 8080
